# ai-color-workflow

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: generate_pairs.py  predict.py  train.py  view_pairs.py
src/: dataset.py  generator.py  model.py  predictor.py  trainer.py  transforms.py  viewer.py
tests/: test_dataset.py  test_generator.py  test_model.py  test_predictor.py  test_trainer.py  test_transforms.py  test_viewer.py
